--- a/finalProject/app/src/main/AndroidManifest.xml
+++ b/finalProject/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.shemeshda.finalproject" >
+    package="com.example.shemeshda.finalproject">
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:name=".finalProject"
@@ -8,14 +12,15 @@
         android:icon="@mipmap/ic_launcher"
         android:label="finalProject"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddPostActivity"></activity>
     </application>
 
 </manifest>
